# shrimp-detector

./: Cargo.toml  README.md  build.rs
src/: main.rs
ui/: App.slint
