[package]
name = "shrimp-detector"
version = "1.0.0"
edition = "2024"
description = "A Rust reimplementation of the great Shrimp Detector"
authors = ["SQD.exe"]
repository = "https://github.com/SQDexe/shrimp-detector"
readme = "README.md"

[build-dependencies]
slint-build = "1.12.1"
winresource = "0.1.22"

[dependencies]
rodio = { version = "0.21.1", default-features = false, features = ["playback", "mp3"] }
slint = "1.12.1"
